@@ -3,10 +3,9 @@ package com.unicorn.my_little_pony.domain.facades.booking.services;
 // Tydzień 4, Wzorzec Facade
 // Serwis rekomendujący dodatki do wynajmu.
 
-import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
-
-import java.util.*;
+import java.util.Map;
 
 //Tydzien 7, zasada open-close sterowanie danymi
 //rekomendacje dodatków nie sa zapisane w logice metody,
@@ -17,9 +16,9 @@ public class RecommendationService {
     private final Map<String, List<String>> recommendations = new HashMap<>();
 
     public RecommendationService() {
-        recommendations.put("DEFAULT", Arrays.asList("Decoration", "Trainer"));
-        recommendations.put("VIP", Arrays.asList("Decoration", "Trainer", "Golden Saddle"));
-        recommendations.put("RAINBOW", Arrays.asList("Rainbow Sparkles", "Magic Trainer"));
+        recommendations.put("DEFAULT", List.of("Decoration", "Trainer"));
+        recommendations.put("VIP", List.of("Decoration", "Trainer", "Golden Saddle"));
+        recommendations.put("RAINBOW", List.of("Rainbow Sparkles", "Magic Trainer"));
     }
 
     public void addRule(String customerType, List<String> extras) {
